# python-tg-textimagebot

./: .gitignore  .gitlab-ci.yml  Makefile  pyproject.toml  requirements.txt
app/: __main__.py  bot.py  env.py  image.py  keyboards.py  strings.py
app/db/: db_functions.py
app/models/: category.py  mail.py  pics.py  promo.py  settings.py  users.py
app/utils/: cli.py
cfg/: .env.dist
